<resources>
    <string name="app_name">My coupon</string>
    <string name="enter">Ingresar</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="loginWithFacebook">Registrarse con Facebook</string>
    <string name="loginWithGoogle">Registrarse con Google</string>
    <string name="register">Registrarse</string>
    <string name="or">Ó</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="cellPhone">Celular</string>
    <string name="repeatPassword">Repetir Contraseña</string>
    <string name="myCoupons">Mis Cupones</string>
    <string name="home">Home</string>
    <string name="MyPerfil">Mi Perfil</string>
    <string name="save">Guardar</string>
    <string name="couponAvailable">Cupones disponibles: </string>
    <string name="expire">Expira: </string>
    <string name="iWantTheCoupon">QUIERO ESTE CUPÓN</string>
    <string name="coupons">Cupones</string>
    <string name="nameStore">Station Burger</string>
    <string name="tokenStore">1PFFrogCyJaQIFf2ebUiZzM1e0n1</string>
    <string name="databaseCouponsName">customers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
