<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_background"
    tools:context=".activities.register.LoginFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forgotPasswor_textView_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Olvidó su Contraseña?"
                android:textAlignment="center"
                android:textColor="@color/colorLetterBlack"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/login_button_login"
                app:layout_constraintStart_toStartOf="@+id/login_button_login"
                app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

            <EditText
                android:id="@+id/email_editText_login"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password_editText_login"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/password"

                android:inputType="textPassword"
                android:paddingLeft="16dp"
                app:layout_constraintEnd_toEndOf="@+id/email_editText_login"
                app:layout_constraintStart_toStartOf="@+id/email_editText_login"
                app:layout_constraintTop_toBottomOf="@+id/email_editText_login" />

            <Button
                android:id="@+id/login_button_login"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:text="@string/enter"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/password_editText_login"
                app:layout_constraintStart_toStartOf="@+id/password_editText_login"
                app:layout_constraintTop_toBottomOf="@+id/password_editText_login" />

            <Button
                android:id="@+id/register_button_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_button"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/forgotPasswor_textView_login"
                app:layout_constraintStart_toStartOf="@+id/forgotPasswor_textView_login"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswor_textView_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>
